# cy-weather

./: README.md  docker-compose.yaml
.github/workflows/: ci.yml  security.yml  static.yml
api/: main.py  pyproject.toml  requirements.txt
api/src/metrics/: __init__.py  prometheus_metrics.py
api/src/models/: Weather.py
api/src/resources/: weather_resource.py
api/src/services/: weather_service.py
api/tests/: test_api.py
grafana/provisioning/dashboards/: cy-weather-dashboard.json  dashboards.yml
grafana/provisioning/datasources/: prometheus.yml
prometheus/: prometheus.yml
web/: .env  .env.example  .env.production  eslint.config.js  package-lock.json  package.json  vite.config.ts
web/src/__tests__/: CurrentWeather.test.ts
